# AIFlow

./: .gitignore  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md
docs/architecture/: autotuner.md  data-flow.md  ir.md  kernel.md  optimizer.md  orchestration.md  overview.md  plugin-system.md  profiler.md  visualization.md
examples/: README.md
src/aiflow/: __init__.py
src/aiflow/autotuner/: __init__.py  base.py
src/aiflow/cli/: __init__.py  main.py
src/aiflow/flows/: __init__.py  pipeline.py
src/aiflow/ir/: __init__.py  graph.py  infer.py  utils.py
src/aiflow/kernel/: __init__.py  backends.py
src/aiflow/optimizer/: __init__.py  passes.py  passes_impl.py
src/aiflow/parsers/: __init__.py  base.py  onnx.py
src/aiflow/plugins/: __init__.py  registry.py
src/aiflow/profiler/: __init__.py  base.py
src/aiflow/utils/: __init__.py  logger.py  logging.py
tests/: test_imports.py
tests/ir/: test_graph_utils.py  test_graph_validation.py  test_infer.py  test_infer_conv.py
tests/optimizer/: test_fusion_cbr.py  test_passes.py
tests/parsers/: test_onnx_e2e_chain.py  test_onnx_parser_mvp.py
